--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://52be7c11-5bcf-4e64-805e-f5277b471bb0.preview.emergentagent.com
 WDS_SOCKET_PORT=443
